# Praktikum-Bildverarbeitung

./: CMakeLists.txt  README.md  dkgn.txt  main.cpp  ohneroyale.cpp
